@@ -1,4 +1,4 @@
-id-utils TODO - Future directions
+idutils TODO - Future directions
 
 * General
   - Add comments to all substantive functions
