@@ -1,3 +1,7 @@
+2006-01-08  Claudio Fontana  <claudio@gnu.org>
+
+	* src/mkid.c: fixed bad offtostr usage (now uses return value)
+	
 2006-01-06  Claudio Fontana  <claudio@gnu.org>
 
 	* configure.ac: reverted change to "conditionally add -I ../intl to the
